--- a/src/components/Snow/Snow.module.scss
+++ b/src/components/Snow/Snow.module.scss
@@ -71,7 +71,7 @@
 
       label {
         display: block;
-        margin-bottom: 8px;
+        margin-bottom: 3px;
         color: var(--text-always-white);
         font-size: 0.9rem;
         opacity: 0.75;
@@ -79,25 +79,71 @@
 
       .buttons {
         display: flex;
-        gap: 8px;
+        justify-content: space-between;
+        padding: 4px;
+        border: 1px solid #0000003f;
+        background-color: var(--background-always-white);
+        @include border-radius(var(--border-radius-l));
 
         button {
           flex: 1;
           padding: 6px 12px;
           color: var(--text-secondary-color);
-          background-color: var(--background-always-white);
-          border: 1px solid #0000003f;
+          border: 1px solid #ffffff3f;
           cursor: pointer;
           transition: all 0.2s ease;
           @include border-radius(var(--border-radius-m));
 
           &.active {
-            border: 1px solid #ffffff3f;
             background-color: var(--christmas-green);
             color: var(--text-always-white);
           }
         }
       }
     }
+  }
+}
+
+.sliderContainer {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  width: 100%;
+  height: auto;
+  padding: 0 3px;
+  border: 1px solid #0000003f;
+  background: var(--background-always-white);
+  @include border-radius(var(--border-radius-l));
+
+  input.slider {
+    flex: 1;
+    -webkit-appearance: none;
+    outline: none;
+    height: 32px;
+    background: #ffffff00;
+
+    // 滑塊
+    &::-webkit-slider-thumb {
+      -webkit-appearance: none;
+      appearance: none;
+      margin-top: 2px;
+      width: 28px;
+      height: 28px;
+      border: 1px solid #ffffff3f;
+      background: var(--christmas-green);
+      cursor: pointer;
+      @include border-radius(14px);
+    }
+    // 滑塊軌道
+    &::-webkit-slider-runnable-track {
+      height: 32px;
+      // background: var(--background-always-white);
+      @include border-radius(16px);
+    }
+  }
+
+  .sliderValue {
+    min-width: 3em;
+    text-align: right;
   }
 }
