--- a/public/theme.css
+++ b/public/theme.css
@@ -3,9 +3,13 @@
   --secondary-color: #666666;
   --border-color: #e5e5e5;
   --border-hover-color: #7f7f7f;
+  --border-color-alpha: #00000013;
 
-  --background-color: #fff;
+  --background-color: rgb(255, 255, 255);
+  --background-color-rgb: 255, 255, 255;
   --background-secondary-color: #f5f5f5;
+  --background-tertiary-color: #cecece;
+  --background-always-white: #ffffff;
   --warning-background-color: #c8422a;
 
   --text-color: #131313;
@@ -18,6 +22,14 @@
   /* Audio Player */
   --progress-line: #e1e1e1;
   --pregress-dot: #3f3f3f;
+
+  --christmas-red: #e34242;
+  --christmas-green: #0a900a;
+  --snow-color: #c6ecf1;
+
+  --new-year-red: #e34242;
+  --new-year-blue: #3e3ef6;
+  --new-year-purple: #911be6;
 }
 
 [data-theme='dark'] {
@@ -25,12 +37,16 @@
   --secondary-color: #000;
   --border-color: #303030;
   --border-hover-color: #7f7f7f;
+  --border-color-alpha: #ffffff13;
 
   --background-color: #131313;
+  --background-color-rgb: 19, 19, 19;
   --background-secondary-color: #202020;
+  --background-tertiary-color: #333333;
+  --background-always-white: #ffffff;
   --warning-background-color: #c04d39;
 
-  --text-color: #f5f5f5;
+  --text-color: #e1e1e1;
   --text-secondary-color: #999999;
   --text-always-white: #f5f5f5;
 
@@ -40,4 +56,12 @@
   /* Audio Player */
   --progress-line: #474747;
   --pregress-dot: #d0d0d0;
+
+  --christmas-red: #ce2121;
+  --christmas-green: #0b850b;
+  --snow-color: #ffffff;
+
+  --new-year-red: #e34242;
+  --new-year-blue: #3939f4;
+  --new-year-purple: #6a05b3;
 }
