--- a/src/pages/Project/Project.module.scss
+++ b/src/pages/Project/Project.module.scss
@@ -18,20 +18,19 @@
   }
 }
 
+.project {
+  @include page-container;
+}
+
 // project list
 .projectList {
-  @include flexbox(column, center, center);
+  @include flexbox(column, start, center);
   padding: 0;
-  padding-top: 60px;
   width: 100%;
   height: 100%;
 
   > .projectListContent {
-    padding: 24px 12px;
-    width: 100%;
-    max-width: 540px;
-    height: 100%;
-    overflow-y: scroll;
+    @include page-container-content;
 
     > ul {
       width: 100%;
@@ -45,6 +44,7 @@
         margin-bottom: 12px;
         border: 1px solid var(--border-color);
         overflow: hidden;
+        @include border-radius(var(--border-radius-m));
 
         &:hover {
           border: 1px solid var(--border-hover-color);
@@ -122,11 +122,6 @@
           -ms-border-radius: 12px;
           -o-border-radius: 12px;
         }
-        border-radius: 24px;
-        -webkit-border-radius: 24px;
-        -moz-border-radius: 24px;
-        -ms-border-radius: 24px;
-        -o-border-radius: 24px;
       }
     }
   }
