--- a/src/pages/ShortcutUrlGenerator/ShortcutUrlGenerator.module.scss
+++ b/src/pages/ShortcutUrlGenerator/ShortcutUrlGenerator.module.scss
@@ -24,7 +24,7 @@
     padding: 8px 16px;
     border: 1px solid var(--border-color);
 
-    &:hover {
+    &:not([disabled]):hover {
       color: var(--text-always-white);
       background-color: var(--link-hover-color);
     }
