Integrated FullCalendar Libraries and Refined UI for Enhanced Scheduling Features
Feature Enhancement/Addition:
- Introduced the FullCalendar library to support advanced scheduling capabilities, including day-grid and time-grid views, interaction, and integration with React components, enriching the application's calendar and scheduling functionality.
- Added new Calendar and ScheduleModal components, establishing a foundation for feature-rich calendar interactions such as event clicking, dragging, and resizing.
- Created new routes and linked calendar functionalities in the application's main navigation, enhancing the user navigation experience and access to the scheduling feature.
- Enhanced user sign-in flow to create a new user document in Firestore if not already present, ensuring user data consistency across the application.

UI Adjustments:
- Implemented new color variables and calendar-specific styles in the global theme.css and dynamically adjusted them based on the selected theme.
- Refined overall styling consistency of modals, buttons, and control panels across the application.
- Adjusted link hover color and text styles for improved readability and visual appeal.
- Streamlined layout of the App component by removing obsolete code related to logo animations and other unused CSS properties.

Refactoring:
- Simplified routing paths by renaming 'laboratory' to 'lab' for brevity and updated corresponding navigation elements.

Dependencies Update:
- Added several packages including @fullcalendar/core and its related plugins to enable comprehensive calendar functionalities.

Documentation:
- Updated localization files for enhanced internationalization support, adding new entries specific to scheduling features and updating existing translations to reflect new functionalities.

Other Relevant Categories:
- Adjusted Firestore security rules and involved handling of user documents for better security and performance when handling user data during sign-in.

Commit

--- a/public/theme.css
+++ b/public/theme.css
@@ -14,11 +14,15 @@
   --warning-background-color: #c8422a;
 
   --text-color: #131313;
+  --text-color-reverse: #e1e1e1;
   --text-secondary-color: #5f5f5f;
+  --text-tertiary-color: #999999;
   --text-always-white: #f5f5f5;
+  --text-danger-color: #e34242;
+  --text-edit-color: #3e3ef6;
 
   --link-color: #545454;
-  --link-hover-color: #1c66c7;
+  --link-hover-color: #3a72bb;
 
   /* Audio Player */
   --progress-line: #e1e1e1;
@@ -33,6 +37,25 @@
   --new-year-purple: #911be6;
 
   --fireworks-core-color: rgb(188, 225, 230);
+
+  /* Calendar */
+  --fc-button-bg-color: #3c60ac;
+  --fc-button-hover-bg-color: #446bbd;
+  --fc-button-active-bg-color: #2f4c8c;
+  --fc-button-border-color: #3c60ac;
+  --fc-button-hover-border-color: #446bbd;
+  --fc-button-active-border-color: #2f4c8c;
+  --fc-border-color: #e5e5e5;
+
+  /* Schedule */
+  --schedule-block-none: #9f9f9f;
+  --schedule-block-red: #c75959;
+  --schedule-block-green: #56a756;
+  --schedule-block-blue: #4475a9;
+  --schedule-block-yellow: #a5a53a;
+  --schedule-block-purple: #af4aaf;
+  --schedule-block-orange: #c2834c;
+  --schedule-block-pink: #ce6093;
 }
 
 [data-theme='dark'] {
@@ -51,8 +74,12 @@
   --warning-background-color: #c04d39;
 
   --text-color: #e1e1e1;
+  --text-color-reverse: #131313;
   --text-secondary-color: #999999;
+  --text-tertiary-color: #666666;
   --text-always-white: #f5f5f5;
+  --text-edit-color: #3e3ef6;
+  --text-danger-color: #e34242;
 
   --link-color: #b4b4b4;
   --link-hover-color: #3b84e4;
@@ -68,4 +95,10 @@
   --new-year-red: #e34242;
   --new-year-blue: #3939f4;
   --new-year-purple: #6a05b3;
+
+  /* Calendar */
+  --fc-button-bg-color: #314d88;
+  --fc-button-hover-bg-color: #375595;
+  --fc-button-focus-bg-color: #273e70;
+  --fc-border-color: #303030;
 }
