Major Overhaul with New Features and Refinements
Feature Enhancement/Addition:
- Introduced a dark and auto theme mode in addition to the existing light mode, enhancing visual comfort for different environments.
- Implemented a new metadata component to manage SEO more effectively across different parts of the application.
- Enhanced the Laboratory section with a new categorized project listing, improving navigation and user experience.
- Added comprehensive handling for creating, updating, and deleting portfolios and blogs, expanding the admin functionalities.

Bug Fix:
- Corrected the authorization and login logic by refining the Redux state management ensuring robust user authentication.

Performance Optimization:
- Optimized Firestore queries in the scheduling feature by adding orderBy clauses to sort data effectively, leading to quicker retrieval times.

UI Adjustments:
- Overhauled the entire color scheme for UI elements across light and dark themes to maintain consistency and visual appeal.
- Refined the user interface in the Portfolio and Laboratory sections with new layout arrangements, icons, and interactive components.

Refactoring:
- Major refactoring in the Project and Laboratory sections, splitting components into smaller, more manageable parts.
- Replaced various CSS modules with SCSS across components, streamlining style management and enhancing customization capabilities.

Dependencies Update:
- Upgraded Firebase library to leverage newer cloud functions and improve database interactions.
- Removed unused dependencies related to URL handling and date management, simplifying the project structure.

Documentation:
- Updated README and inline documentation to reflect changes in project structure and new functionalities.

Other Relevant Categories:
- Enhanced error handling and user feedback mechanisms including new error message displays.

Commit Summary:
This commit introduces significant enhancements with new features like dark mode, improved SEO han

--- a/public/theme.css
+++ b/public/theme.css
@@ -38,6 +38,14 @@
 
   --fireworks-core-color: rgb(188, 225, 230);
 
+  /* Switch */
+  --switch-background-color: #e1e1e1;
+  --switch-background-color-checked: #459f3d;
+  --switch-border: #dadada;
+  --switch-border-checked: #ffffff5f;
+  --switch-slider-color: #dadada;
+  --switch-slider-color-checked: #ffffff;
+
   /* Calendar */
   --fc-button-bg-color: #3c60ac;
   --fc-button-hover-bg-color: #446bbd;
@@ -95,6 +103,14 @@
   --new-year-red: #e34242;
   --new-year-blue: #3939f4;
   --new-year-purple: #6a05b3;
+
+  /* Switch */
+  --switch-background-color: #494949;
+  --switch-background-color-checked: #1c6715;
+  --switch-border: #535353;
+  --switch-border-checked: #ffffff3f;
+  --switch-slider-color: #535353;
+  --switch-slider-color-checked: #ffffff;
 
   /* Calendar */
   --fc-button-bg-color: #314d88;
