--- a/src/pages/Home/Home.module.scss
+++ b/src/pages/Home/Home.module.scss
@@ -1,12 +1,13 @@
 @import '../../styles/_mixins.scss';
 
-.home_container {
-  @include page-container;
+.home {
+  @include page;
   // scroll-snap-type: y mandatory;
   // scroll-padding-top: calc(var(--header-height) + var(--space));
   // scroll-behavior: smooth;
 
-  > .home_content {
+  > .container {
+    @include page-container;
     @include flexbox(column, start, start);
     padding: 0 var(--space-2x);
     width: 100%;
