--- a/src/styles/_mixins.scss
+++ b/src/styles/_mixins.scss
@@ -26,7 +26,7 @@
 }
 
 // page container
-@mixin page-container {
+@mixin page {
   @include flexbox(column, start, center);
   padding: 0;
   padding-top: var(--header-height);
@@ -34,6 +34,23 @@
   height: 100%;
   overflow-x: hidden;
   overflow-y: auto;
+  background-color: var(--background-color);
+}
+
+@mixin page-container($maxWidth: var(--page-max-width-m)) {
+  @include flexbox(column, start, center);
+  gap: var(--space);
+  width: calc(100% - var(--space-4x));
+  max-width: $maxWidth;
+}
+
+// child page container
+@mixin child-page {
+  @include page;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 @mixin page-container-content($maxWidth: var(--page-max-width-m)) {
@@ -93,6 +110,14 @@
   -moz-border-radius: $radius;
   -ms-border-radius: $radius;
   -o-border-radius: $radius;
+}
+
+@mixin transition($transition) {
+  transition: $transition;
+  -webkit-transition: $transition;
+  -moz-transition: $transition;
+  -ms-transition: $transition;
+  -o-transition: $transition;
 }
 
 @mixin transform-container($transform) {
