--- a/src/index.scss
+++ b/src/index.scss
@@ -1,21 +1,22 @@
 @import './styles/_mixins.scss';
 
 * {
-  @includehide-scrollbar:;
+  @include hide-scrollbar;
   box-sizing: border-box;
   font-weight: 400;
   font-style: normal;
   letter-spacing: 0.05rem;
   color: var(--text-color);
   outline: none;
+  border: 0 solid #00000000;
   font-family: 'Outfit', 'Noto Sans TC', -apple-system, BlinkMacSystemFont,
     'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
     'Droid Sans', 'Helvetica Neue', sans-serif;
-  transition: 0.5s cubic-bezier(0.32, 1, 0.32, 1);
-  -webkit-transition: 0.5s cubic-bezier(0.32, 1, 0.32, 1);
-  -moz-transition: 0.5s cubic-bezier(0.32, 1, 0.32, 1);
-  -ms-transition: 0.5s cubic-bezier(0.32, 1, 0.32, 1);
-  -o-transition: 0.5s cubic-bezier(0.32, 1, 0.32, 1);
+  transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -webkit-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -moz-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -ms-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
+  -o-transition: 0.5s cubic-bezier(0.23, 1, 0.32, 1);
 }
 
 html {
